--- a/static/css/masonry.css
+++ b/static/css/masonry.css
@@ -122,13 +122,13 @@ body { font-family: sans-serif; }
   height: 250px;
 }
 
-.conf_big {
+.confbig {
   width: 250px;
   height: 120px;
   background-color: var(--red);
 }
 
-.conf_big--gigante {
+.confbig--gigante {
   width: 340px;
   height: 340px;
 }
