--- a/static/css/masonry.css
+++ b/static/css/masonry.css
@@ -122,13 +122,13 @@ body { font-family: sans-serif; }
   height: 250px;
 }
 
-.confbig {
+.big_conf {
   width: 250px;
   height: 120px;
   background-color: var(--red);
 }
 
-.confbig--gigante {
+.big_conf--gigante {
   width: 320px;
   height: 340px;
 }
